# cheetah-planning

./: CMakeLists.txt  README.md
common/src/Dynamics/: FloatingBaseModel.cpp
config/: CustomHeightmap.txt  cheetah-3-defaults.yaml  default-terrain.yaml  mini-cheetah-defaults.yaml  uneven_terrain.yaml
robot/include/: RobotRunner.h
robot/src/: RobotRunner.cpp
user/MIT_Controller/: CMakeLists.txt  original.txt  ros_output.json
user/MIT_Controller/Controllers/BackFlip/: DataReadCtrl.hpp  DataReader.cpp  DataReader.hpp  FrontJumpCtrl.cpp
user/MIT_Controller/Controllers/Locomotion/: CMakeLists.txt  DataProcessor.cpp  DataProcessor.hpp  Locomotion.cpp  Locomotion.hpp
user/MIT_Controller/Controllers/VisionMPC/: VisionMPCLocomotion.cpp  VisionMPCLocomotion.h
user/MIT_Controller/Controllers/convexMPC/: ConvexMPCLocomotion.cpp  ConvexMPCLocomotion.h  Gait.cpp
user/MIT_Controller/FSM_States/: ControlFSM.cpp  ControlFSM.h  FSM_State.h  FSM_State_FrontJump.cpp  FSM_State_Loco.cpp  FSM_State_Loco.h  FSM_State_Locomotion.cpp  FSM_State_RecoveryStand.cpp  FSM_State_StandUp.cpp
