FILE(GLOB_RECURSE headers *.hpp)
FILE(GLOB_RECURSE sources *.cpp)
find_package(jsoncpp CONFIG REQUIRED)
find_package(libInterpolate REQUIRED)
add_library (Locomotion SHARED ${headers} ${sources} )
target_link_libraries (Locomotion biomimetics lcm qpOASES)
target_link_libraries(Locomotion jsoncpp_lib)
target_link_libraries(Locomotion libInterpolate::Interpolate)
